<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.smartpet.online.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.smartpet.online.fragments.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in" />
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.smartpet.online.fragments.SignUpFragment"
        android:label="@string/sign_uo"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/forgetPasswordFragment"
        android:name="com.smartpet.online.fragments.ForgetPasswordFragment"
        android:label="@string/forget_password"
        tools:layout="@layout/fragment_forget_password" />
    <fragment
        android:id="@+id/postPetFragment"
        android:name="com.smartpet.online.fragments.PostPetFragment"
        tools:layout="@layout/fragment_post_pet" />
    <fragment
        android:id="@+id/findPetFragment"
        android:name="com.smartpet.online.fragments.FindPetFragment"
        tools:layout="@layout/fragment_find_pet" />
</navigation>