<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    tools:context=".activiities.ViewPetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:padding="@dimen/_5sdp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/find_a_pet"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:id="@+id/image"
        android:src="@drawable/pet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/colorBg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/name"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/pet_name"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/colorBg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/name"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/enter_pet_price"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/colorBg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/name"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/pet_type"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/colorBg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/name"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/posted_by"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/colorBg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numberBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/name"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/phone_number"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</LinearLayout>