<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBg"
    tools:context=".fragments.FIndShopFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:padding="@dimen/_5sdp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/find_a_shop"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/welcome_to_smart_pet"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/find_a_pet"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_8sdp"
        android:background="@color/colorBg"
        android:clickable="true"

        android:elevation="@dimen/_5sdp"
        android:focusable="true"
        android:gravity="center"
        tools:targetApi="lollipop" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:reverseLayout="false" />
</LinearLayout>