<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    tools:context=".fragments.PostPetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:padding="@dimen/_5sdp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/post_a_pet"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/welcome_to_smart_pet"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/post_a_pet"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/colorBg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/pet_name"
                    android:hint="@string/pet_name"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/selectPet"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/gradient_spinner"
                android:elevation="@dimen/_5sdp"
                android:gravity="center"
                android:overScrollMode="never"
                android:scrollbars="none" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColorHint="@color/white"

                app:boxBackgroundColor="@color/colorBg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/enter_pet_price"
                    android:hint="@string/enter_pet_price"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColorHint="@color/white"

                app:boxBackgroundColor="@color/colorBg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/pet_description"
                    android:hint="@string/pet_description"
                    android:inputType="textMultiLine|text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/add_image_layout" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/postBtn"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/colorBtn"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/post"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_10sdp"
                app:elevation="@dimen/_10sdp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>